--- a/src/idioma/MessagesBundle_en.properties
+++ b/src/idioma/MessagesBundle_en.properties
@@ -49,6 +49,7 @@ historial_fecha4 = Alphabetically from highest to lowest
 
 toolbar_web = Web
 toolbar_web_menu = Menu
+toolbar_web_menu_servidor = Server menu
 toolbar_web_crear_link =Create internet link
 toolbar_web_nombre_subdominio = Subdomain name (Optional):
 toolbar_web_nombre_subdominio_crear = Create link
