--- a/src/idioma/MessagesBundle_es.properties
+++ b/src/idioma/MessagesBundle_es.properties
@@ -49,6 +49,7 @@ historial_fecha4 =Alfabeticamente de mayor a menor
 
 toolbar_web = Web
 toolbar_web_menu = Menu
+toolbar_web_menu_servidor = Menu Servidor
 toolbar_web_crear_link = Crear link internet
 toolbar_web_menu_ir_a_web = Ir a Web
 toolbar_web_nombre_subdominio = Nombre de subdominio (Opcional):
