file size positive

--- a/bin/idioma/MessagesBundle_en.properties
+++ b/bin/idioma/MessagesBundle_en.properties
@@ -49,6 +49,10 @@ historial_fecha4 = Alphabetically from highest to lowest
 
 toolbar_web = Web
 toolbar_web_menu = Menu
+toolbar_web_licencia = License
+toolbar_web_introducir_licencia = Enter license
+toolbar_web_licencia_comprobar = License entered correctly.
+toolbar_web_licencia_comprobar_incorrecta = Wrong license.
 toolbar_web_menu_servidor = Server menu
 toolbar_web_crear_link =Create internet link
 toolbar_web_nombre_subdominio = Subdomain name (Optional):
