--- a/src/idioma/MessagesBundle_es.properties
+++ b/src/idioma/MessagesBundle_es.properties
@@ -49,6 +49,10 @@ historial_fecha4 =Alfabeticamente de mayor a menor
 
 toolbar_web = Web
 toolbar_web_menu = Menu
+toolbar_web_licencia = Licencia
+toolbar_web_introducir_licencia = Introducir licencia
+toolbar_web_licencia_comprobar = Licencia introducida correctamente.
+toolbar_web_licencia_comprobar_incorrecta = Licencia incorrecta.
 toolbar_web_menu_servidor = Menu Servidor
 toolbar_web_crear_link = Crear link internet
 toolbar_web_menu_ir_a_web = Ir a Web
